--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>My Resume</title>
 </head>
 <body>
-    
+     
+
+    <h2>Summary</h2>
+    <p>In this section I will be sharing my education, work experience and skills,..etc with you. </p>
+    <hr size="1">
+
+    <h2>Education</h2>
+    <p>I hold Bachelor's in Computer Application Degree</p>
+    <hr size="1">
+
+    <h2>Skills</h2>
+    <p><ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+    </ul></p>
+    <hr size="1">
+
+
+
 </body>
 </html>
