add profile image
used table to do alignment

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>My Resume</title>
 </head>
 <body>
+    <!-- using table as instruction said not to use CSS and JS -->
+    <table cellSpacing="20">
+        <tr>
+            <td> <img src="/images/hero-resized-modified.png" alt="my picture"></td>
+            <td><h1>Dev Duckling</h1>
+                <p>Following path to the be web developer</p></td>
+        </tr>
+    </table>
      
 
     <h2>Summary</h2>
