--- a/index.html
+++ b/index.html
@@ -33,7 +33,18 @@
     </ul></p>
     <hr size="1">
 
+    <!-- again using table -->
 
-
+    <table cellSpacing="30">
+        <tr>
+            <td> <h2><a href="/pages/hobbies.html">My Hobbies</a></h2></td>
+            <td> <h2><a href="/pages/contactme.html">Contact Me</a></h2></td>
+        </tr>
+    </table>
+ 
+    <!-- footer -->
+    <footer>
+        <p>© 2023 Dev Duckling</p>
+    </footer>
 </body>
 </html>
