--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- using table as instruction said not to use CSS and JS -->
     <table cellSpacing="20">
         <tr>
-            <td> <img src="images/hero-resized-modified.png" alt="my picture"></td>
+            <td> <img src="https://github.com/DevDuckling/Capstone-Project-1/blob/main/images/hero-resized-modified.png" alt="my picture"></td>
             <td><h1>Dev Duckling</h1>
                 <p>Following path to the be web developer</p></td>
         </tr>
@@ -37,8 +37,8 @@
 
     <table cellSpacing="30">
         <tr>
-            <td> <h2><a href="pages/hobbies.html">My Hobbies</a></h2></td>
-            <td> <h2><a href="pages/contactme.html">Contact Me</a></h2></td>
+            <td> <h2><a href="https://github.com/DevDuckling/Capstone-Project-1/blob/main/pages/hobbies.html">My Hobbies</a></h2></td>
+            <td> <h2><a href="https://github.com/DevDuckling/Capstone-Project-1/blob/main/pages/contactme.html">Contact Me</a></h2></td>
         </tr>
     </table>
  
